--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1> José Emilio Delgado Jiménez </h1>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae esse exercitationem cumque sunt explicabo itaque harum reprehenderit. Nulla, sunt ea ullam maxime perferendis magnam sed, explicabo nesciunt magni ratione pariatur.</p>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
+  <body>
+    <h1> José Emilio Delgado Jiménez </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In tempore impedit reiciendis officia, consequatur corrupti eum laboriosam eligendi reprehenderit! Aspernatur culpa nostrum animi accusantium ab sapiente quam in eligendi laudantium.
+
+    </p>
+  
+  </body>
 </html>
